Ejercicio A1 terminado